api to check cheater status
