# routes/api.php
@@ -105,6 +105,8 @@ Route::group(['middleware' => ['auth:sanctum']], function () {
     Route::post('/answers', 'App\Http\Controllers\AnswerController@store');
     // Get student answers
     Route::get('/exams/{exam}/my-answers', 'App\Http\Controllers\TakeExamController@showStudentAnswers');
+    // check if student is a cheater
+    Route::get('/exams/{exam}/cheater-status' , 'App\Http\Controllers\TakeExamController@checkCheaterStatus');
     // ----------------------- Mark Exam APIs ------------------------
     // Get all student solutions
     Route::get('/exams/{exam}/all-answers', 'App\Http\Controllers\MarkExamController@showExamAnswers');
@@ -172,4 +174,5 @@ Route::group(['middleware' => ['auth:sanctum']], function () {
 Route::group(['middleware' => ['auth:sanctum']], function () {
     Route::post('/cheater', 'App\Http\Controllers\CheatingDetailsController@store');
     Route::post('/cheater/action', 'App\Http\Controllers\CheatingDetailsController@takeAction');
+    
 });
